force-app/main/default/objects/Form_Template__c/fields/Body2__c.field-meta.xml
<CustomField>
    <fullName>Body2__c</fullName>
    <label>Body2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>