force-app/main/default/objects/Form_Template__c/fields/Form_Fields_Party_Selection__c.field-meta.xml
<CustomField>
    <fullName>Form_Fields_Party_Selection__c</fullName>
    <inlineHelpText>Determines the type of selector displayed on the Form Fields page.</inlineHelpText>
    <label>Form Fields Party Selection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>One Defendant</fullName>
            </value>
            <value>
                <fullName>Multiple Defendants</fullName>
            </value>
            <value>
                <fullName>All Defendants</fullName>
            </value>
            <value>
                <fullName>One Party</fullName>
            </value>
            <value>
                <fullName>Multiple Parties</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>