force-app/main/default/objects/Form_Template__c/fields/Judgment_Selection__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Selection__c</fullName>
    <label>Judgment Selection</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>ODA</fullName>
            </value>
            <value>
                <fullName>Settlement</fullName>
            </value>
            <value>
                <fullName>ODA / Settlement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>